<resources>
    <!-- 主畫面 -->
    <string name="app_name">Redeem</string>
    <string name="index_logo">LOGO</string>
    <string name="index_member_register">會員註冊</string>
    <string name="index_member_login">會員登入</string>
    <string name="index_company_register">廠商註冊</string>
    <string name="index_company_login">廠商登入</string>

    <!-- 會員/廠商 登入/註冊 -->
    <string name="submit">送出</string>
    <string name="confirm">確認</string>
    <string name="nickname">暱稱：</string>
    <string name="companyname">公司名稱：</string>
    <string name="account">帳號：</string>
    <string name="password">密碼：</string>
    <string name="required">*必填</string>
    <string name="required2">*必填(>=2字元)</string>
    <string name="required6">*必填(>=6字元)</string>

    <!-- 交易畫面 -->
    <string name="process">交易處理中</string>

    <!-- 廠商/會員介面 (By YUKI) -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">廠商名稱</string>
    <string name="nav_header_subtitle">目前金額: 0元</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_rewrite">修改公司資料</string>
    <string name="menu_logout">登出</string>
    <string name="menu_statics">統計資訊</string>
    <string name="menu_instruction">使用說明影片</string>
    <string name="menu_about">關於</string>
    <string name="menu_share">分享</string>

    <string name="toolbar2_name">今日所辦活動</string>
    <string name="imagebtn_paid">付紅包</string>
    <string name="title_activity_firm_item">FirmActivityItem</string>
    <string name="title_activity_firm_accounting_book">FirmAccountingBook</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="member_menu_rewrite">修改會員資料</string>
    <string name="member_menu_instruction">使用說明影片</string>

    <string name="member_nav_header_title">會員名稱</string>
</resources>
