<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="4"
            android:contentDescription="@string/index_logo"
            android:padding="5dp"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/index_member_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/color_2e578b"
            android:text="@string/index_member_register"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/index_member_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.3"
            android:background="@drawable/color_2e578b"
            android:text="@string/index_member_login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/index_company_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/color_009785"
            android:text="@string/index_company_register"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/index_company_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.3"
            android:background="@drawable/color_009785"
            android:radius="5dp"
            android:text="@string/index_company_login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

    </LinearLayout>

</ScrollView>