<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nickname"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nickname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="2"
                android:autofillHints="@string/required2"
                android:ems="10"
                android:hint="@string/required2"
                android:inputType="text"
                android:textSize="24sp"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/account"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="2"
                android:autofillHints="@string/required6"
                android:ems="10"
                android:hint="@string/required6"
                android:inputType="text"
                android:textSize="24sp"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="2"
                android:autofillHints="@string/required6"
                android:ems="10"
                android:hint="@string/required6"
                android:inputType="textPassword"
                android:textSize="24sp"
                tools:targetApi="o" />

        </LinearLayout>

        <Button
            android:id="@+id/upload"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/submit"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>